--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  image_picker: ^1.1.2
+  image_picker: ^1.0.7
   shared_preferences: ^2.2.2
   firebase_core: ^2.27.1
   geolocator: ^11.0.0
@@ -50,6 +50,9 @@ dependencies:
   provider: ^6.1.1
   go_router: ^13.2.0
   firebase_storage: ^11.6.0
+  dio: ^5.4.0
+  flutter_local_notifications: ^17.2.4
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
